--- a/admin/index.html
+++ b/admin/index.html
@@ -33,11 +33,9 @@
 <h1>Administation page</h1>
 <div>
 <p>Please identify yourself.</p>
-<form action="www.sito.it" method="post" id="login"  >
-<p>Username <input type="text" name="username" id="username" size="15" value="" /></p>
-<p>Password <input type="password" name="password" id="password" size="15" value=""  /></p>
-<p><input type="checkbox" name="rememberusername" id="rememberusername" value="1"  />
-Ricorda username</p>
+<form action="" method="post" name="login_form" onsubmit="return login()"  >
+<p>Username <input type="text" name="username" required id="username" size="15" value="" /></p>
+<p>Password <input type="password" name="password" required id="password" size="15" value=""  /></p>
 <p><input type="submit" id="login" value="Login" /></p>
 <p><a href="lost_password.html" target="_blank" >Hai dimenticato lo username o la password?</a><p>
 </form>
