test change using github desktop

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-	<b> Qui sarà progettata e strutturata la prima pagina del progetto<b>
+	<b> Qui sarà progettata e strutturata la prima pagina del progetto<b> :D
 </body>
 
 </html>
