Nuovi nomi per le varibili dinamiche per evitare incomprensioni e conflitti di tipo

--- a/index.html
+++ b/index.html
@@ -59,29 +59,29 @@
          $("v5").append(result.edificio);
     });
     $.getJSON("http://localhost:8081/postiOccupati", function(result){
-         $("p1").append(result[1]);
-         $("p2").append(result[2]);
-         $("p3").append(result[3]);
-         $("p4").append(result[4]);
-         $("p5").append(result[5]);
+         $("o1").append(result[1]);
+         $("o2").append(result[2]);
+         $("o3").append(result[3]);
+         $("o4").append(result[4]);
+         $("o5").append(result[5]);
     });
     });
     </script>
 	<table>
         <tr>
-            <td><n1></td><td><v1></td><td><p1></td>
+            <td><n1></td><td><v1></td><td><o1></td>
         </tr>
         <tr>
-            <td><n2></td><td><v2></td><td><p2></td>
+            <td><n2></td><td><v2></td><td><o2></td>
         </tr>
         <tr>
-            <td><n3></td><td><v3></td><td><p3></td>
+            <td><n3></td><td><v3></td><td><o3></td>
         </tr>
         <tr>
-            <td><n4></td><td><v4></td><td><p4></td>
+            <td><n4></td><td><v4></td><td><o4></td>
         </tr>
         <tr>
-            <td><n5></td><td><v5></td><td><p5></td>
+            <td><n5></td><td><v5></td><td><o5></td>
         </tr>
 	</table>
     <div></div>
