home con link funzionanti

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<title>Biblio Enigma</title>
     <link href="style/home.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.1.min.js"></script> 
+    <script src="js/stuff.js"></script> 
     <!--
         non viene specificato il tipo di script, in HTML5 javascript è il
         linguaggio di scripting ufficiale!
@@ -85,7 +86,7 @@
 	<div id="biblioteca-table" class="clear">
     <div class="singola">
         <h3>Biblioteca Di Geologia<span><o1></span></h3>
-        <a class="info" href="">Info</a>         
+        <a class="info" href="info/geologia.html">Info</a>         
         <ul>
             <li><b><v1></b></li>
             <li><b><posti1></b> Posti Totali</li>
@@ -97,7 +98,7 @@
     </div>
     <div class="singola">
         <h3>Biblioteca Di Chimica<span><o2></span></h3>
-        <a class="info" href="">Info</a>         
+        <a class="info" href="info/chimica.html">Info</a>         
         <ul>
             <li><b><v2></b></li>
             <li><b><posti2></b> Posti Totali</li>
@@ -109,7 +110,7 @@
     </div>
     <div class="singola">
         <h3>Biblioteca Alesandrina<span><o3></span></h3>
-        <a class="info" href="">Info</a>         
+        <a class="info" href="info/alessandrina.html">Info</a>         
         <ul>
             <li><b><v3></b></li>
             <li><b><posti3></b> Posti Totali</li>
@@ -121,7 +122,7 @@
     </div>
     <div class="singola">
         <h3>Biblioteca Di Fisica<span><o4></span></h3>
-        <a class="info" href="">Info</a>         
+        <a class="info" href="info/fisica.html">Info</a>         
         <ul>
             <li><b><v4></b></li>
             <li><b><posti4></b> Posti Totali</li>
@@ -132,7 +133,7 @@
         </ul> 
     </div>
 	</div>
-	<a id="bottone">ADMIN</a> <a id="bottone">API</a>
+	<a id="bottone" href="javascript:admin();">ADMIN</a> <a id="bottone" href="javascript:info();">API</a>
 </body>
 
 </html>
