--- a/info/fisica.html
+++ b/info/fisica.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-	<title>Biblioteca di fisica</title>
+	<title>Biblioteca di Fisica</title>
     <link href="../style/global.css" rel="stylesheet" type="text/css">
 
 </head>
@@ -19,6 +18,20 @@
        di servizi, come la consultazione, il prestito, l’uso di pc fissi e  l’accesso alla rete wireless con il proprio PC portatile.
       Tali servizi sono rivolti sia agli utenti istituzionali che agli studenti che frequentano la nostra Università.</p2>
 <br><br>
+<h3>Servizi:</h3>
+
+<p2>In biblioteca è possibile accedere ai servizi previa iscrizione, è inoltre permesso scaricare dal sito i testi didattici e
+  le dispense per i corsi di studio in fisica.</p2>
+<br>
+<br>
+<h3>Ricerca bibliografica:</h3>
+
+<p2>Come effettuare una ricerca e quali sono i principali portali dove trovare informazioni bibliografiche
+   (dal catalogo della biblioteca ai cataloghi nazionali ed internazionali, dalla lista dei nostri argomenti
+   alle banche dati organizzate per discipline): alcuni suggerimenti su come localizzare i documenti necessari
+   e su come orientarsi in rete.</p2>
+<br>
+<br>
     <h3> Note Storiche:</h3>
 
 <img src="./img/blaserna.jpg" alt="Blaserna" style="float:left; margin: 10px"><p2>Quando <p3>  Pietro Blaserna</p3> venne chiamato a dirigere il Regio Istituto Fisico di Roma dal 1873 al 1918, trovò in
@@ -51,20 +64,7 @@ Prof.ssa
 Maria Grazia Ianniello.</p2>
 <br>
 <br>
-<h3>Servizi:</h3>
 
-<p2>In biblioteca è possibile accedere ai servizi previa iscrizione, è inoltre permesso scaricare dal sito i testi didattici e
-  le dispense per i corsi di studio in fisica.</p2>
-<br>
-<br>
-<h3>Ricerca bibliografica:</h3>
-
-<p2>Come effettuare una ricerca e quali sono i principali portali dove trovare informazioni bibliografiche
-   (dal catalogo della biblioteca ai cataloghi nazionali ed internazionali, dalla lista dei nostri argomenti
-   alle banche dati organizzate per discipline): alcuni suggerimenti su come localizzare i documenti necessari
-   e su come orientarsi in rete.</p2>
-<br>
-<br>
 <a href= "http://www.phys.uniroma1.it/biblioteca/ita/ST/storia.html" >Fonte</a>
   </div>
 </body>
