Simple funny unsecure login function

--- a/admin/index.html
+++ b/admin/index.html
@@ -28,16 +28,28 @@
 <head>
 <title>Admin Panel</title>
 <link rel="stylesheet"  type="text/css" href="style.css">
+<script src="cripto.js"></script>
+<script src="safe.js"></script>
 </head>
-
+<script>
+function verifica() {
+	var user=hex_md4(document.login_form.user.value);
+	var password=hex_md4(document.login_form.password.value);
+  if( user != "5870e19db3da8c9c67962497f01d25a3" || password != "1fa391fcd3138f4d4a46762cb3440e74"){
+	  alert("usrname/password errati");
+	  console.log(user);
+	  console.log(password);
+	  return false;
+	}
+}</script>
 <h1>Administation page</h1>
 <div>
 <p>Please identify yourself.</p>
-<form action="" method="post" name="login_form" onsubmit="return login()"  >
-<p>Username <input type="text" name="username" required id="username" size="15" value="" /></p>
+<form action="javascript:tralalero();" method="POST" name="login_form" onsubmit="return verifica()"  >
+<p>Username <input type="text" name="user" required id="user" size="15" value="" /></p>
 <p>Password <input type="password" name="password" required id="password" size="15" value=""  /></p>
 <p><input type="submit" id="login" value="Login" /></p>
-<p><a href="lost_password.html" target="_blank" >Hai dimenticato lo username o la password?</a><p>
+<p><a href="http://pajhome.org.uk/crypt/md5" target="_blank" >Licenza criptomd5 utilizzato</a><p>
 </form>
 </div>
 
