--- a/admin/gestione.html
+++ b/admin/gestione.html
@@ -1,1 +1,16 @@
-pagina che contiene form con dropdown come detto su wa
+<form class="" action="index.html" method="post">
+  Seleziona id:
+  <select name="id">
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+  </select><br>
+Stato:
+  <select name="state">
+    <option value="studenteIn">studenteIn</option>
+    <option value="studenteOut">studenteOut</option>
+  </select><br>
+
+  <input type="submit" value="Invio">
+</form>
