--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <td colspan=7><center>
 			<p>Vuoi Studiare?</p>
 			<p>Sarebbe proprio comodo sapere quanti posti sono già occupati! ;D</p>
-			<br><a href="home.html">Clica qui per scoprirlo</a>
+			<br><a href="home.html">Clicca qui per scoprirlo</a>
 			</center></td>
     </tr>
 <tr style="width:100%; min-height:30%;">
