--- a/richiesta.html
+++ b/richiesta.html
@@ -5,14 +5,12 @@
   var n =0
   function validateForm() {
     var x = document.forms["stat"]["nome"].value;
-    var y = "Inserisci Nome";
-    if (x == "" || x==y) {
+    if (x == "") {
         alert("Perfavore inserisci il nome.");
         return false;
     }
     x= document.forms["stat"]["cognome"].value;
-    y= "Inserisci Cognome";
-    if ( x == "" || x==y) {
+    if ( x == "") {
       alert("Perfavore inserisci il cognome.");
       return false;
     }
@@ -32,7 +30,7 @@ function addcheck(elem) {
 <body>
 
 <form name="stat" action="index.html" onsubmit="return validateForm()" method="post">
-  Lo studente: <input type="text" value="Inserisci Nome" name="nome"><input type="text" value="Inserisci Cognome" name="cognome">,<br>
+  Lo studente: <input type="text" placeholder="Nome" name="nome"><input type="text" placeholder="Cognome" name="cognome">,<br>
   Dichiara secondo i sensi di norma della legge vigente, di essere studente della Università
   <select name="uni">
       <option value="uniroma1">La Sapienza</option>
@@ -46,7 +44,7 @@ function addcheck(elem) {
     <input type="checkbox" id="3" name="teche[]" value="Alessandrina" onclick="addcheck(this)">Rettorato (Alessandrina)
     <input type="checkbox" id="4" name="teche[]" value="Fisica" onclick="addcheck(this)">Fisica <br>
   <br>
-  I suddetti dati verranno inviati esclusivamente all'indirizzo istituzionale: <input type="email" name="email" value="Email istituzionale"><br>
+  I suddetti dati verranno inviati esclusivamente all'indirizzo istituzionale: <input type="email" name="email" placeholder="email istituzionale"><br>
   <input type="submit" value="Invio"><input type="reset">
 </form>
 </body>
